tests/errors/out_of_scope.x
myTable = {1, 2, 3; 4, 5, 6}

index = 3

write myTable[index, 0]